# automate_backup

./: .gitignore  README.md  README_VAULT.md  VAULT_PASSWORD_GUIDE.md  checkpoint_backup.yml  cisco_backup.yml  cisco_command.txt  clear_vault_cache.sh  download_backup.sh  fetch_backup.py  fetch_backup.spec  fw-expert.txt  fw.txt  inventory.yml  main.py  pyproject.toml  run_checkpoint_backup.sh  run_cisco_backup.sh  scp_backup.sh  test_cache.sh  test_output.txt  test_output2.txt  vault_password.py
group_vars/all/: vault.yml
